# FETCH2

./: API_DEVELOPMENT.md  ARCHITECTURE.md  BACKLOG.md  CONFIGURATION.md  DEPLOYMENT.md  FRONTEND_DEVELOPMENT.md  ILS_INTEGRATION.md  MIGRATION_PLAN_DEV_TEST.md  MIGRATION_PLAN_LC_TO_FETCH2.md  OFFLINE_MODE.md  README.md  USER_GUIDE.md  package-lock.json
automation/: .gitignore  README.md  (+1 more)
fetch-inventory_service/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_DEVELOPMENT.md  CONFIGURATION.md  ILS_INTEGRATION.md  README.md  SEARCH_OPTIMIZATION.md  dev-build.sh  helper.sh  pyproject.toml
fetch-inventory_service/app/: filter_params.py  logger.py  main.py  scheduler.py  sorting.py  tasks.py  utilities.py
fetch-inventory_service/app/database/: session.py
fetch-inventory_service/app/helpers/: __init__.py
fetch-inventory_service/images/: api.local.Containerfile  api.stage.Containerfile  api.test.Containerfile
fetch-inventory_service/k8s/: deployment-test.yml  service.yml
fetch-inventory_service/migration/: DATA_MAPPING_MATRIX.md  ETL_DATA_MIGRATION_GUIDE.md  MIGRATION_GUIDE_IN_PLACE.md  MIGRATION_SCRIPT_MANUAL.md  db_inspector.py  fetch2_schema.json  fetch2_tables.txt  lc_schema.json  lc_tables.txt  migration_errors.json  migration_report.json  run_etl_migration.py
fetch-inventory_service/migrations/: env.py
fetch-inventory_service/schemaspy/: db-ready-check.sh
fetch-inventory_service/scripts/: check_models.py  search_optimization.sql
fetch-inventory_service/terraform/: main.tf
fetch-inventory_service/tests/: test-docker-compose.yml
(+1074 files in other folders)
